CI, updated dependencies,  overally improved

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -6,6 +6,6 @@
     <title>Website Page</title>
   </head>
   <body>
-    <h1>Could use svelte/next.js/etc instead of traditional html here</h1>
+    <h1>Could use next.js/svelte/etc. instead of raw html here</h1>
   </body>
 </html>
